k8s/multiport/sidecar.yaml
apiVersion: v1
kind: Service
metadata:
  name: customer-db
  labels:
    app: customer-db
spec:
  ports:
  - port: 3306
    name: tcp
    protocol: TCP
  selector:
    app: customer-db
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: customer-db
spec:
  serviceName: customer-db
  replicas: 1
  selector:
    matchLabels:
      app: customer-db
  template:
    metadata:
      labels:
        app: customer-db
    spec:
      containers:
      - name: mysql
        image: mariadb:latest
        ports:
        - containerPort: 3306
          name: mysql
          protocol: TCP
        volumeMounts:
        - name: customer-db
          mountPath: /var/lib/mysql
      volumes:
      - name: customer-db
        emptyDir: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hotrod
    component: customer
  name: customer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hotrod
      component: customer
  strategy: {}
  template:
    metadata:
      labels:
        app: hotrod
        component: customer
      annotations:
        sidecar.signadot.com/inject: "true"
    spec:
      containers:
        - args:
            - customer
          image: signadot/hotrod:latest
          imagePullPolicy: Always
          name: hotrod
          ports:
            - containerPort: 8081
      restartPolicy: Always
      imagePullSecrets:
      - name: signadot-registry
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hotrod
    component: customer
  name: customer
spec:
  ports:
    - name: http-web
      port: 8081
      targetPort: 8081
  selector:
    app: hotrod
    component: customer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hotrod
    component: driver-route
  name: driver-route
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hotrod
      component: driver-route
  strategy: {}
  template:
    metadata:
      annotations:
        sidecar.signadot.com/inject: "true"
      labels:
        app: hotrod
        component: driver-route
    spec:
      containers:
        - name: driver
          args:
            - driver
          image: signadot/hotrod:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8082
              name: grpc
        - name: route
          args:
            - route
          image: signadot/hotrod:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8083
              name: rest
      restartPolicy: Always
      imagePullSecrets:
      - name: signadot-registry
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hotrod
    component: driver-route
  name: driver-route
spec:
  ports:
    - name: driver-grpc
      port: 80
      targetPort: grpc
    - name: route-rest
      port: 81
      targetPort: rest
  selector:
    app: hotrod
    component: driver-route
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hotrod
    component: driver-route
  name: driver
spec:
  ports:
    - name: grpc
      port: 8082
      targetPort: grpc
  selector:
    app: hotrod
    component: driver-route
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hotrod
    component: driver-route
  name: route
spec:
  ports:
    - name: route-rest
      port: 8083
      targetPort: rest
  selector:
    app: hotrod
    component: driver-route
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hotrod
    component: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hotrod
      component: frontend
  strategy: {}
  template:
    metadata:
      labels:
        app: hotrod
        component: frontend
      annotations:
        sidecar.signadot.com/inject: "true"
    spec:
      containers:
        - args:
            - frontend
          image: signadot/hotrod:latest
          imagePullPolicy: Always
          name: hotrod
          ports:
            - containerPort: 8080
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hotrod
    component: frontend
  name: frontend
spec:
  ports:
    - name: http-web
      port: 8080
      targetPort: 8080
  selector:
    app: hotrod
    component: frontend
